--- a/src/components/FormComp/FormStyle.css
+++ b/src/components/FormComp/FormStyle.css
@@ -1,4 +1,4 @@
-*{
+.formContainer *{
     color: white;
     font-family: Popins, sans-serif;
 }
@@ -7,7 +7,7 @@
     padding-top: 20px;
 }
 
-label{
+.formContainer label{
     color: #a4e8ff;
 }
 
@@ -127,27 +127,5 @@ label{
 }
 
 
-
-  
-/* input[type="radio"] {
-    background-color: transparent;
-    border: .0625em solid rgba(255,255,255,.5);
-    border-radius: 50%;
-    box-shadow: inset 0 0 0 0 white;
-    cursor: pointer;
-    font: inherit;
-    height: 1em;
-    outline: none;
-    width: 1em;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    &:checked {
-      background-color: white;
-      box-shadow: inset 0 0 0 .1875em #47d1da;
-      -webkit-transition: background .15s, box-shadow .1s; 
-      transition: background .15s, box-shadow .1s; 
-    }
-  } */
-  
 
 
