--- a/src/components/Header/HeaderStyle.css
+++ b/src/components/Header/HeaderStyle.css
@@ -1,10 +1,11 @@
 .header{
+    padding-top: 30px;
     text-align: center;
     font-size: 50px;
     font-family: 'Staatliches', sans-serif;
     color: white;
     margin: 0;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     /* border: 1px solid red; */
 }
 
