--- a/src/components/FormComp/FormStyle.css
+++ b/src/components/FormComp/FormStyle.css
@@ -1,3 +1,17 @@
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.formContainer input[type=number] {
+  -moz-appearance: textfield;
+}
+
+
+
 .formContainer *{
     color: white;
     font-family: Popins, sans-serif;
