--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
-body {
-  margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Sinhala:wght@200;300;500&display=swap");
 
-}
-
-*{
-  /* font-family: 'Poppins', sans-serif; */
-}
 
