--- a/src/components/FormComp/FormStyle.css
+++ b/src/components/FormComp/FormStyle.css
@@ -26,13 +26,29 @@ input::-webkit-inner-spin-button {
 }
 
 .d{
-    font-family: Popins, sans-serif;
+    font-family: 'Poppins', sans-serif;
     /* border: 1px solid red; */
     width: 85%;
     margin: auto;
     /* text-align: center; */
     padding: 8px;
 }
+
+.InpFile{
+    font-family: 'Poppins', sans-serif;
+}
+
+
+
+.upload-btn{
+    font-family: 'Poppins', sans-serif;
+    border-radius: 18px;
+    background-color: rgb(8, 26, 55);
+    border: 1px solid #0088b6;
+    color: #a4e8ff !important;
+    padding: 12px 28px !important;
+}
+
 
 .i{
     margin-top: 5px;
@@ -68,6 +84,7 @@ input::-webkit-inner-spin-button {
 }
 
 .imgUploadp{
+    font-family: 'Poppins', sans-serif;
     margin-bottom: 5px;
     font-size: 6px;
     
@@ -83,6 +100,7 @@ input::-webkit-inner-spin-button {
 .btn-submit{
     color: black;
     padding: 3px 5px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .divLabFile{
@@ -109,6 +127,17 @@ input::-webkit-inner-spin-button {
     margin-top: 10px;
     font-size: 15px;
 }
+
+.position p{
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+}
+
+.position label{
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+}
+
 .status label{
     margin: 5px;
 }
@@ -143,3 +172,26 @@ input::-webkit-inner-spin-button {
 
 
 
+input[type="file"]::file-selector-button {
+    margin-top: 10px;
+    border-radius: 8px;
+    padding: 0px 10px;
+    height: 30px;
+    cursor: pointer;
+    background-color: rgb(8, 26, 55);
+    border: 1px solid #0088b6;
+    color: #a4e8ff !important;
+    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
+    margin-right: 16px;
+    transition: background-color 200ms;
+  }
+  
+  /* file upload button hover state */
+  input[type="file"]::file-selector-button:hover {
+    background-color: rgb(40, 70, 118);
+  }
+  
+  /* file upload button active state */
+  input[type="file"]::file-selector-button:active {
+    background-color: rgb(40, 70, 118);
+  }
