--- a/src/routes/TicketPortal/TicketPortal.css
+++ b/src/routes/TicketPortal/TicketPortal.css
@@ -41,6 +41,15 @@
     height: 700px;
 }
 
+.footerPortal{
+    width: 90%;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    margin: auto;
+    font-size: 12px;
+    margin-bottom: 20px;
+}
 
 @media (max-width: 1000px) {
     .App{
