--- a/src/components/Header/HeaderStyle.css
+++ b/src/components/Header/HeaderStyle.css
@@ -5,14 +5,29 @@
     font-family: 'Staatliches', sans-serif;
     color: white;
     margin: 0;
-    /* margin-top: 20px; */
-    /* border: 1px solid red; */
 }
+
+
+.Naadalogo{
+    width: 1200px;
+
+}
+
+.NaadaLogoDiv{
+    /* border: 1px solid red; */
+    margin: auto;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: -580px;
+    /* margin-bottom: 20px; */
+    /* box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5); */
+}
+
 
 .header2{
     /* border: 1px solid red; */
     margin: 0;
-    color: white;
+    color: rgb(0, 0, 0);
     position: relative;
     top:-10px;
     text-align: center;
@@ -20,4 +35,18 @@
     font-family: 'Poppins', sans-serif;
     
     margin-bottom: 20px;
+}
+
+@media (max-width: 1000px) {
+    .NaadaLogoDiv img{
+        width: 800px;
+        /* border: 1px solid red; */
+    }
+}
+
+@media (max-width: 500px) {
+    .NaadaLogoDiv img{
+        width: 400px;
+        /* border: 1px solid red; */
+    }
 }
