--- a/src/routes/TicketPortal/TicketPortal.css
+++ b/src/routes/TicketPortal/TicketPortal.css
@@ -46,7 +46,7 @@ body{
 
 .mainContainer {
     
-    padding-top: 100px;
+    padding-top: 0px;
     display: flex;
     flex-direction: row;
     width: 65%;
@@ -62,7 +62,7 @@ body{
     background-color: rgba(0, 0, 0, 0.744);
     /* border:3px solid red; */
     width: 50%;
-    height: 700px;
+    height: 850px;
     color: black;
 }
 
@@ -71,7 +71,7 @@ body{
     /* border:3px solid red; */
     background-color: rgb(0, 0, 0);
     width: 50%;
-    height: 700px;
+    height: 850px;
 }
 
 
@@ -79,7 +79,7 @@ body{
 .diya-doothak-div{
     width:60%;
     margin: auto;
-    background-color: rgba(0, 0, 0, 0.597);
+    background-color: rgba(0, 0, 0, 0.773);
     border-radius: 20px;
     /* border: 2px solid #03b3c7; */
     padding: 20px;
@@ -116,16 +116,31 @@ body{
     font-family: 'Poppins', sans-serif;
     color: rgb(255, 255, 255);
     margin: auto;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
     line-height: 1.2;
     /* margin-bottom: 20px; */
-    padding-bottom: 20px;
-    /* background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0),rgba(255, 255, 255, 0.749),rgb(255, 255, 255)); */
+    /* background-color: #0000008a; */
+    /* text-shadow: #000000 2px 2px 1px; */
+    width: fit-content;
+    padding: 12px 30px;
+    margin-top: 50px;
+    margin-bottom: 5px;
+    border-radius: 20px 0px 20px 0px;
+   }
+
+.diya-link{
+    background-color: #006469e4;
+    color: white;
+    padding: 8px 16px;
+    border-radius: 16px;
+    text-decoration: none;
 }
 
-
-
+/* .diya-doothak-img{
+    width:500px;
+    margin: auto;
+} */
 
 @media (max-width: 1000px) {
     .App{
