--- a/src/routes/TicketPortal/TicketPortal.css
+++ b/src/routes/TicketPortal/TicketPortal.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    /* background-color: rgb(255, 170, 0); */
+    background-color: rgb(0, 0, 0);
 }
 ::-webkit-scrollbar {
     width: 5px;
@@ -34,7 +34,9 @@ body{
     /* background-color: sandybrown !important; */
     /* border: 5px solid rgb(255, 0, 0); */
     /* background-repeat: no-repeat; */
-    background-image: url('../../assets/Background7.png');
+    background-image: url('../../assets/Background7.png'),linear-gradient(to bottom, rgba(87, 58, 0, 0),rgb(89, 50, 0));
+    background-blend-mode:multiply;
+    /* background-image: linear-gradient(to bottom, rgb(87, 58, 0),rgb(57, 32, 0)); */
     /* background-repeat:; */
     /* background-color: rgb(0, 0, 0); */
     /* background-image: linear-gradient(to bottom left, rgb(87, 58, 0),rgb(57, 32, 0)); */
@@ -148,19 +150,21 @@ body{
         background-size:cover;
         /* border: 1px solid rgb(255, 0, 0); */
         background-position: 50%;
+        background-image: linear-gradient(to bottom, rgb(87, 58, 0),rgb(57, 32, 0));
     }
 
     .App{
-        height: 330vh !important;
+        height: 280vh !important;
     }
     .mainContainer {
+        margin-top: 500px;
         flex-direction: column;
         width: 100%;
     }
     .FormDetailsCN{
         border-radius: 20px;
         width:80% !important;
-        height: 750px !important;
+        height: 900px !important;
         margin-bottom: 20px;
     }
     .FormCompCN{
