--- a/src/routes/TicketPortal/TicketPortal.css
+++ b/src/routes/TicketPortal/TicketPortal.css
@@ -64,7 +64,7 @@ body{
     background-color: rgba(0, 0, 0, 0.744);
     /* border:3px solid red; */
     width: 50%;
-    height: 850px;
+    height: 900px;
     color: black;
 }
 
@@ -73,12 +73,24 @@ body{
     /* border:3px solid red; */
     background-color: rgb(0, 0, 0);
     width: 50%;
-    height: 850px;
+    height: 900px;
+}
+
+.diya-doothak-img{
+    width: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.donateText{
+    font-size: 16px;
 }
 
 
-
 .diya-doothak-div{
+    text-align: center;
     width:60%;
     margin: auto;
     background-color: rgba(0, 0, 0, 0.773);
@@ -102,11 +114,12 @@ body{
 
 
 .diya-doothak-logo{
-    width: 20vw;
+    width: 30%;
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0px;
+    margin-bottom: 10px;
 }
 
 
