--- a/src/pages/TicketPortal/TicketPortal.css
+++ b/src/pages/TicketPortal/TicketPortal.css
@@ -31,23 +31,15 @@ body{
     padding: 0%;
     margin: 0%;
     height:max-content;
-    /* background-color: sandybrown !important; */
-    /* border: 5px solid rgb(255, 0, 0); */
-    /* background-repeat: no-repeat; */
     background-image: url('../../assets/Background7.png'),linear-gradient(to bottom, rgba(87, 58, 0, 0),rgb(89, 50, 0));
     background-blend-mode:multiply;
-    /* background-image: linear-gradient(to bottom, rgb(87, 58, 0),rgb(57, 32, 0)); */
-    /* background-repeat:; */
-    /* background-color: rgb(0, 0, 0); */
-    /* background-image: linear-gradient(to bottom left, rgb(87, 58, 0),rgb(57, 32, 0)); */
     background-size:cover;
-    
+    background-position: 50%;;
 }
 
 
 
 .mainContainer {
-    
     padding-top: 0px;
     display: flex;
     flex-direction: row;
